Styling changes to console to prevent scrollbar from appearing

--- a/src/app/widgets/Console/index.styl
+++ b/src/app/widgets/Console/index.styl
@@ -38,6 +38,7 @@
 .terminal-container {
     background: #000;
     overflow-y: hidden;
+    overflow-x: hidden;
     width: 100%;
     padding: 0 5px;
     min-height: 180px;
@@ -59,4 +60,6 @@
     height: 100% !important;
     padding: 0 !important;
     display: flex;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
